--- a/assets/style/_typography.scss
+++ b/assets/style/_typography.scss
@@ -22,9 +22,14 @@
 
   &__link {
     text-decoration: none;
-    font-size: 16px;
-    color: #4a4a4a;
+    font-size: 32px;
+    color: #fff;
     transition: all 0.2s ease-in-out;
+
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      color: #4a4a4a;
+    }
 
     &:hover {
       color: #000;
@@ -40,10 +45,20 @@
 
 .module {
   &__title {
-    font-size: 48px;
+    font-size: 28px;
+    line-height: 36px;
     color: #2d2d2d;
     font-weight: 700;
-    line-height: 65px;
+
+    @media screen and (min-width: 375px) {
+      font-size: 32px;
+      line-height: 45px;
+    }
+
+    @media screen and (min-width: 545px) {
+      font-size: 48px;
+      line-height: 65px;
+    }
   }
 
   &__description {
