--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,7 @@
 @import 'typography';
 @import 'button';
 @import 'scene';
+@import 'burger-icon';
 
 * {
   margin: 0;
@@ -13,14 +14,31 @@ body {
 }
 
 .container {
-  padding: 30px 150px;
+  position: relative;
+  padding: 30px calc(10px + 3vw);
+  max-width: 1400px;
+  height: 100vh;
+  margin: 0 auto;
+  overflow-x: hidden;
+
+  @media screen and (min-width: 431px) {
+    padding: 30px calc(30px + 3vw);
+  }
+
+  @media screen and (min-width: 1400px) {
+    padding: 30px 150px;
+  }
 }
 
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+
+  @media screen and (min-width: 768px) {
+    align-items: center;
+  }
 
   &__logo-and-title {
     display: flex;
@@ -43,45 +61,124 @@ body {
   }
 
   &__links {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 30px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
     list-style: none;
-    gap: 45px;
-    margin-left: 30px;
+    gap: 20px;
+    transition: all 0.2s ease-in-out;
+    background-color: #2d2d2d;
+    height: 100vh;
+    transform: translateX(100%);
+    z-index: 2;
+
+    @media screen and (min-width: 768px) {
+      transform: initial;
+      flex-direction: row;
+      justify-content: space-between;
+      position: static;
+      background-color: initial;
+      height: initial;
+      padding: 0;
+    }
+
+    @media screen and (min-width: 900px) {
+      gap: 45px;
+    }
+
+    @media screen and (min-width: 1400px) {
+      margin-left: 30px;
+    }
   }
 
   &__link {
     &-active {
       cursor: default;
+      position: relative;
 
       &::after {
         content: '';
         display: block;
-        margin: 4px auto 0;
-        width: 21px;
-        height: 1.5px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: 4px 0 0;
+        height: 5px;
         background-color: #fb9b69;
+
+        @media screen and (min-width: 768px) {
+          width: 21px;
+          height: 1.5px;
+          left: 50%;
+          transform: translateX(-50%);
+        }
       }
+    }
+  }
+
+  &__button-burger-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 100%;
+    gap: calc(10px + 2vw);
+
+    @media screen and (min-width: 375px) {
+      width: initial;
+      flex-direction: row;
+      align-items: center;
     }
   }
 }
 
 .module {
-  position: relative;
   display: flex;
-  flex-direction: row;
-  gap: 80px;
-  margin-top: 118px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 60px;
+
+  @media screen and (min-width: 375px) {
+    margin-top: 80px;
+  }
+
+  @media screen and (min-width: 545px) {
+    margin-top: 118px;
+  }
+
+  @media screen and (max-width: 900px) {
+    gap: 60px;
+  }
+
+  @media screen and (min-width: 900px) {
+    flex-direction: row;
+  }
+
+  @media screen and (min-width: 1400px) {
+    gap: 220px;
+  }
 
   &__content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    align-items: center;
+    text-align: center;
+    z-index: 1;
+
+    @media screen and (min-width: 900px) {
+      align-items: flex-start;
+      text-align: left;
+    }
   }
 
   &__title {
-    max-width: 474px;
+    max-width: 456px;
   }
 
   &__description {
@@ -99,7 +196,8 @@ body {
   align-items: center;
   background-color: #fff;
   border-radius: 100px;
-  width: 597px;
+  width: 100%;
+  max-width: 597px;
   height: 62px;
   padding-right: 6px;
 
@@ -108,8 +206,12 @@ body {
     outline: none;
     height: 100%;
     border-radius: 100px;
-    padding: 0 38px;
+    padding: 0 16px;
     width: 100%;
+
+    @media screen and (min-width: 390px) {
+      padding: 0 12px 0 38px;
+    }
   }
 
   &__button {
@@ -156,5 +258,9 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &__info {
+    text-align: left;
   }
 }
