feat: implement burger menu

--- a/assets/style/_typography.scss
+++ b/assets/style/_typography.scss
@@ -26,18 +26,32 @@
     color: #fff;
     transition: all 0.2s ease-in-out;
 
+    &:hover {
+      color: #fb9b69;
+    }
+
+    &_active {
+      pointer-events: none;
+
+      &:hover {
+        color: #4a4a4a;
+      }
+    }
+
     @media screen and (min-width: 768px) {
       font-size: 16px;
       color: #4a4a4a;
-    }
 
-    &:hover {
-      color: #000;
-    }
-
-    &-active {
       &:hover {
-        color: #4a4a4a;
+        color: #000;
+      }
+
+      &_active {
+        pointer-events: none;
+
+        &:hover {
+          color: #4a4a4a;
+        }
       }
     }
   }
