--- a/assets/style/burger-icon.scss
+++ b/assets/style/burger-icon.scss
@@ -5,18 +5,26 @@
   width: 30px;
   height: 22px;
   background: none;
-  outline: 0;
-  border: 0;
+  cursor: pointer;
   z-index: 0;
-  transition: z-index 0.2s step-end, rotate 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 
   @media screen and (min-width: 768px) {
     display: none;
+  }
+
+  &_active {
+    transform: rotate(-90deg);
+
+    .button-burger-icon__line {
+      background-color: #fff;
+    }
   }
 
   &__line {
     width: 100%;
     height: 2.5px;
     background-color: #2d2d2d;
+    transition: background-color 0.2s ease-in-out;
   }
 }
