--- a/assets/style/_burger-icon.scss
+++ b/assets/style/_burger-icon.scss
@@ -17,14 +17,14 @@
     transform: rotate(-90deg);
 
     .button-burger-icon__line {
-      background-color: #fff;
+      background-color: var(--white);
     }
   }
 
   &__line {
     width: 100%;
     height: 2.5px;
-    background-color: #2d2d2d;
+    background-color: var(--gray-500);
     transition: background-color 0.2s ease-in-out;
   }
 }
