--- a/assets/style/_button.scss
+++ b/assets/style/_button.scss
@@ -2,13 +2,13 @@
   border: none;
   padding: 9px 23px;
   font-size: 16px;
-  color: #fff;
-  background-color: #48b774;
+  color: var(--white);
+  background-color: var(--green-300);
   border-radius: 23px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 
   &:hover {
-    background-color: #50c981;
+    background-color: var(--green-200);
   }
 }
