--- a/assets/style/_overlay.scss
+++ b/assets/style/_overlay.scss
@@ -5,7 +5,7 @@
   left: 0;
   bottom: 0;
   z-index: -1;
-  background-color: #000;
+  background-color: var(--black);
   opacity: 0;
   transition: z-index 0.2s step-end, opacity 0.2s ease-in-out;
 
