--- a/assets/style/_scene.scss
+++ b/assets/style/_scene.scss
@@ -51,7 +51,7 @@
   .flag {
     position: absolute;
     border-radius: 50%;
-    outline: 10px solid #fff;
+    outline: 10px solid var(--white);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -144,7 +144,7 @@
     width: 450px;
     height: 450px;
     background-color: transparent;
-    border: 2px solid #e8e8e8;
+    border: 2px solid var(--gray-0);
     border-radius: 50%;
 
     @media screen and (max-width: 1260px) {
@@ -157,7 +157,7 @@
     top: 80px;
     width: 280px;
     height: 280px;
-    background-color: #48b774;
+    background-color: var(--green-300);
     border-radius: 50%;
     transition: filter 1s ease-in-out;
 
