--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,4 +1,5 @@
 @import 'typography';
+@import 'variables';
 @import 'button';
 @import 'scene';
 @import 'burger-icon';
@@ -11,7 +12,7 @@
 }
 
 body {
-  background-color: #ecf7f3;
+  background-color: var(--green-100);
 }
 
 .container {
@@ -54,7 +55,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    border: 5px solid #f9a779;
+    border: 5px solid var(--orange-100);
   }
 
   &__title {
@@ -73,7 +74,7 @@ body {
     list-style: none;
     gap: 20px;
     transition: all 0.2s ease-in-out;
-    background-color: #2d2d2d;
+    background-color: var(--gray-500);
     height: 100vh;
     transform: translateX(100%);
     z-index: 3;
@@ -114,7 +115,7 @@ body {
         right: 0;
         margin: 4px 0 0;
         height: 5px;
-        background-color: #fb9b69;
+        background-color: var(--orange-200);
 
         @media screen and (min-width: 768px) {
           width: 21px;
@@ -200,7 +201,7 @@ body {
 .search-form {
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--white);
   border-radius: 100px;
   width: 100%;
   max-width: 597px;
@@ -247,13 +248,13 @@ body {
   &__icon {
     width: 38px;
     height: 38px;
-    border: 3px solid #fff;
+    border: 3px solid var(--white);
     border-radius: 50%;
     overflow: hidden;
     margin-right: -60px;
 
     &:first-child {
-      background-color: #ff8345;
+      background-color: var(--orange-300);
       background-image: url('../images/icons/plus-icon.svg');
       background-repeat: no-repeat;
       background-position: center;
